--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,7 @@
   ],
   "rules": {
     "no-console": "error",
-    "mui-path-imports/mui-path-imports": "error",
+    "mui-path-imports/mui-path-imports": "off",
     //no used vars
     "unused-imports/no-unused-imports": "error",
     "no-useless-escape": "error",
